Modify razorflow library

--- a/inc/razorflow/readme.html
+++ b/inc/razorflow/readme.html
@@ -520,7 +520,7 @@
         <div class="col-10-12 content">
             <h1>THANK YOU</h1>
             <h4>
-              FOR DOWNLOADING RAZORFLOW DASHBOARD FRAMEWORK: JAVASCRIPT              <span>Trial Version</span>
+              FOR DOWNLOADING RAZORFLOW DASHBOARD FRAMEWORK: SUITE              <span>Trial Version</span>
             </h4>
         </div>
         <div class="col-4-12">
@@ -547,6 +547,9 @@
           Use the JavaScript library to build immersive, interactive dashboards with fine grained control that works with just about any server technology out there.
         </p>
         
+                <p>
+          This download also includes the powerful PHP API which helps you build full-featured interactive dashboards faster and more productively than ever. Works with all major databases, MVC Frameworks and libraries.
+        </p>
         
         <h4>Downloading Latest Versions</h4>
         <p>Since RazorFlow is frequently updated with new features, improved stability and better tools - we recommend that you download the latest version when you start development. In the right-column of this page you will find links to download copies of RazorFlow. This is a direct download and there are no forms to fill out, and that link will always download the latest version.</p>
